--- a/form.html
+++ b/form.html
@@ -1,25 +1,12 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <script src="" async defer></script>
-        <form action="" method="get">
-            <!--Buatlah input html di sini-->
-
-        </form>
-    </body>
+<html>
+<head>
+	<title>Jurnal2</title>
+</head>
+<body>
+	<form  action="JurnalP2.php" method="GET">
+	<label for="inputkan">Inputkan: </label><input type="text" name="inputkan">
+	<input type="submit">
+</form>
+</body>
 </html>
